ballista/client/tests/snapshots/context_checks__supported__explain_format_tree_distributed_plan.snap
---
source: ballista/client/tests/context_checks.rs
expression: distributed_plan_txt
---
=========ResolvedStage[stage_id=1.0, partitions=1]=========
┌───────────────────────────┐
│     ShuffleWriterExec     │
│    --------------------   │
│       partitioning:       │
│      Hash([id@0], 16)     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│       aggr: count(1)      │
│        group_by: id       │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│            id:            │
│    __unnest_placeholder   │
│    (make_array(Int64(1    │
│ ),Int64(2),Int64(3),Int64 │
│   (4),Int64(5)),depth=1)  │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         UnnestExec        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│    __unnest_placeholder   │
│    (make_array(Int64(1    │
│ ),Int64(2),Int64(3),Int64 │
│      (4),Int64(5))):      │
│      [1, 2, 3, 4, 5]      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│     PlaceholderRowExec    │
└───────────────────────────┘

=========UnResolvedStage[stage_id=2.0, children=1]=========
Inputs{1: StageOutput { partition_locations: {}, complete: false }}
┌───────────────────────────┐
│     ShuffleWriterExec     │
│    --------------------   │
│     partitioning: None    │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│         count(*):         │
│      count(Int64(1))      │
│                           │
│           id: id          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│       aggr: count(1)      │
│        group_by: id       │
│                           │
│           mode:           │
│      FinalPartitioned     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│   UnresolvedShuffleExec   │
│    --------------------   │
│       partitioning:       │
│      Hash([id@0], 16)     │
└───────────────────────────┘
