ballista/client/tests/snapshots/context_checks__supported__explain_format_tree_physical_plan.snap
---
source: ballista/client/tests/context_checks.rs
expression: physical_plan_txt
---
┌───────────────────────────┐
│       ProjectionExec      │
│    --------------------   │
│         count(*):         │
│      count(Int64(1))      │
│                           │
│           id: id          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│       aggr: count(1)      │
│        group_by: id       │
│                           │
│           mode:           │
│      FinalPartitioned     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      RepartitionExec      │
│    --------------------   │
│ partition_count(in->out): │
│          1 -> 16          │
│                           │
│    partitioning_scheme:   │
│      Hash([id@0], 16)     │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       AggregateExec       │
│    --------------------   │
│       aggr: count(1)      │
│        group_by: id       │
│       mode: Partial       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│            id:            │
│    __unnest_placeholder   │
│    (make_array(Int64(1    │
│ ),Int64(2),Int64(3),Int64 │
│   (4),Int64(5)),depth=1)  │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         UnnestExec        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       ProjectionExec      │
│    --------------------   │
│    __unnest_placeholder   │
│    (make_array(Int64(1    │
│ ),Int64(2),Int64(3),Int64 │
│      (4),Int64(5))):      │
│      [1, 2, 3, 4, 5]      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│     PlaceholderRowExec    │
└───────────────────────────┘
